add some styling to post list

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -604,29 +604,37 @@ input {
   box-shadow: 2px 2px 7px 1px white;
   background: rgb(128, 128, 128, 0.3);
   display: block;
-  height: auto;
   float: left;
   position: relative;
   overflow: hidden;
   margin: 0.25em;
+  width: 100%;
+  height: auto;
 }
 
 .box .media {
+  
+  display: block;
   width: 100%;
-  vertical-align: middle;
+  height: 300px;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  
 }
 
 .box .caption {
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 100%;
-  top: 0;
+  bottom: 0;
   left: 0;
-  background: #000;
+  right: 0;
+  text-align: left;
+  position: absolute;
   background: rgba(0, 0, 0, 0.2);
   opacity: 0;
   transition: all 0.5s ease;
+  color: whitesmoke;
+  font-size: 18px;
+  padding: 20px
 }
 
 .box a:hover .caption {
@@ -655,8 +663,10 @@ input {
   width: 100%;
   position: absolute;
   text-align: center;
+  flex-direction: row;
   top: 50%;
   margin-top: -50px;
+
 }
 
 .box .caption .box_description {
@@ -669,16 +679,17 @@ input {
   max-width: 60%;
   padding: 0.5em;
   z-index: 77;
-  background: black;
+  background: transparent;
   border-bottom: 1px solid rgb(22, 22, 22);
   color: white;
-  font-size: 12px;
+  font-size: 18px;
   font-weight: 300;
   text-align: center;
   margin: auto;
-  box-shadow: 0 6px 6px -6px black;
-  opacity: 1;
+  box-shadow: 0 6px 6px -6px black; 
+  opacity: 1; 
 }
+
 
 .box .caption:hover span {
   animation: slideDown 0.5s 1 ease;
@@ -1180,6 +1191,7 @@ body {
 .box > :last-child > :last-child > :last-child {
   margin-bottom: 0;
 }
+
 
 .thumbnails {
   display: -moz-flex;
