--- a/views/imagesByDate.hbs
+++ b/views/imagesByDate.hbs
@@ -30,7 +30,7 @@
           <div class="btn-group">
               <form action="/profile/share" method="POST" >
                 <input name="image" value="{{this.url}}" hidden>
-                <input name="description" value="{{this.date}} {{title}}: {{explanation}}" hidden>
+                <input name="description" value="{{title}}" hidden>
                 <button type="submit" class="btn btn-sm btn-outline-secondary">share</button>
               </form>
               {{!-- <button type="button" class="btn btn-sm btn-outline-secondary">Details</button> --}}
