--- a/views/imagesByName.hbs
+++ b/views/imagesByName.hbs
@@ -38,7 +38,7 @@
                 <div class="btn-group">
                   <form action="/profile/share" method="POST" >
                     <input name="image" value="{{../links.[0].href}}" hidden>
-                    <input name="description" value="{{title}}: {{description}}" hidden>
+                    <input name="description" value="{{title}}" hidden>
                     <button type="submit" class="btn btn-sm btn-outline-secondary">share</button>
                   </form>
                   <button type="button" class="btn btn-sm btn-outline-secondary">Details</button>
