--- a/views/picDay.hbs
+++ b/views/picDay.hbs
@@ -8,7 +8,7 @@
 
 <form action="/profile/share" method="POST" >
   <input name="image" value="{{this.url}}" hidden>
-  <input name="description" value="{{this.explanation}}" hidden>
+  <input name="description" value="{{this.title}}" hidden>
   <button type="submit" class="btn btn-sm btn-outline-secondary">share</button>
 </form>
 {{/with}}
