display-numbers-of-comments-and-likes

--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -129,8 +129,8 @@
                 </div>
               </div>
             </a>
-            <span>Comments 0</span>
-            <span>Likes 5</span>
+            <span>Comments {{comments.length}}</span>
+            <span>Likes {{liked.length}}</span>
           </div>
           {{/each}}
           {{/with}}
