--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -126,11 +126,11 @@
                 class="media">
                 <div class="caption">
                     <p>{{description}}</p>
+                    <p class="likes-and-comments">Comments {{comments.length}} &middot; Likes {{liked.length}}</p>
                 </div>
               </div>
             </a>
-            <span>Comments {{comments.length}}</span>
-            <span>Likes {{liked.length}}</span>
+            
           </div>
           {{/each}}
           {{/with}}
