add api portal and style the api pages

--- a/views/api.hbs
+++ b/views/api.hbs
@@ -1,7 +1,136 @@
-<div class="text"><a href="/api/picDay">Picture of the day</a></div>
 
-<div class="text"><a href="/api/rovers">Rovers' pictures</a></div>
-<div class="text"><a href="/api/imagesByName">Search in NASA images by theme</a></div>
-<div class="text"><a href="/api/imagesByDate">Search in NASA images by date</a></div>
-<div class="text"><a href="/api/astroids">Astroides passing Earth</a></div>
-<div class="text"><a href="/api/live">Watch Live nasa tv</a></div>
+<main>
+  <section class="slides">
+    <section class="slides-nav"></section>
+    <section class="slide is-active" id="sec1">
+      <div class="slide__content">
+        <figure class="slide__figure">
+          <div class="slide__img" style="
+              background: url(https://apod.nasa.gov/apod/image/1910/MilkyWaySaltFlat_Huerta_2048.jpg);
+              background-size: cover;
+            "></div>
+        </figure>
+        <header class="slide__header">
+          <h2 class="slide__title">
+            <span class="title-line"><span>
+                <a href="/api/picDay" style="text-decoration: none; color: inherit;">APOD</a>
+              </span></span>
+            <br />
+            <br />
+
+            <span class="title-line">
+              <p style="font-size: 0.3em; line-height: 1.7em;">
+                “One of the most popular endpoint at NASA is the Astronomy
+                Picture of the Day.”
+              </p>
+            </span>
+          </h2>
+        </header>
+      </div>
+    </section>
+
+    <section class="slide" id="sec2">
+      <div class="slide__content">
+        <figure class="slide__figure">
+          <div class="slide__img" style="
+              background: url(https://i.pinimg.com/originals/3a/53/75/3a537591a0cbbd4f34d418cd5f34f705.jpg);
+              background-size: cover;
+            "></div>
+        </figure>
+        <header class="slide__header">
+          <h2 class="slide__title">
+            <span class="title-line"><span>
+                <a href="/api/rovers" style="text-decoration: none; color: inherit;">
+                  Mars Rovers</a>
+              </span></span>
+            <br />
+            <br />
+
+            <span class="title-line">
+              <p style="font-size: 0.3em; line-height: 1.7em;">
+                “Collect image data gathered by NASA's Curiosity, Opportunity,
+                and Spirit rovers on Mars.”
+              </p>
+            </span>
+          </h2>
+        </header>
+      </div>
+    </section>
+
+    <section id="sec3" class="slide">
+      <div class="slide__content">
+        <figure class="slide__figure">
+          <div class="slide__img" style="
+              background: url(https://wallup.net/wp-content/uploads/2016/01/18775-Carlsberg-space-advertisements-stars-moon-astronaut-beer-Earth.jpg);
+              background-size: cover;
+            "></div>
+        </figure>
+        <header class="slide__header">
+          <h2 class="slide__title">
+            <span class="title-line">
+              <a href="/api/imagesByName" style="text-decoration: none; color: inherit;">Gallery</a>
+            </span>
+            <br />
+            <br />
+
+            <span class="title-line">
+              <p style="font-size: 0.3em;">
+                “Sun, Earth, March, the whole Galaxy,, you name it!”
+              </p>
+            </span>
+          </h2>
+        </header>
+      </div>
+    </section>
+
+    <section class="slide" id="sec4">
+      <div class="slide__content">
+        <figure class="slide__figure">
+          <div class="slide__img" style="
+              background: url(https://miro.medium.com/max/3840/1*-ivLG-a16m6DxXDBWNo-0A.jpeg);
+              background-size: cover;
+            "></div>
+        </figure>
+        <header class="slide__header">
+          <h2 class="slide__title">
+            <span class="title-line"><span>
+                <a href="/api/astroids" style="text-decoration: none; color: inherit;">
+                  Asteroids - NeoWs</a>
+              </span></span>
+            <br />
+            <br />
+
+            <span class="title-line">
+              <p style="font-size: 0.3em; line-height: 1.7em;">
+                “With NeoWs you can search for near earth Asteroid based on
+                their closest approach date.”
+              </p>
+            </span>
+          </h2>
+        </header>
+      </div>
+    </section>
+    <section class="slide" id="sec5">
+      <div class="slide__content">
+        <figure class="slide__figure">
+          <div class="slide__img" style="background: url(../images/tv.png); background-size: cover;"></div>
+        </figure>
+        <header class="slide__header">
+          <h2 class="slide__title">
+            <span class="title-line">
+              <a href="/api/live" style="text-decoration: none; color: inherit;">Live</a>
+            </span>
+            <br />
+            <br />
+
+            <span class="title-line">
+              <p style="font-size: 0.3em;">
+                “Watch NASA TV live streaming.”
+              </p>
+            </span>
+          </h2>
+        </header>
+      </div>
+    </section>
+  </section>
+</main>
