--- a/views/live.hbs
+++ b/views/live.hbs
@@ -1,2 +1,14 @@
-<iframe width="976" height="549" src="https://www.youtube.com/embed/21X5lGlDOfg" frameborder="0"
-  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<main>
+  <section class="slides">
+    <section class="slides-nav"></section>
+    <section class="slide is-active" id="sec5">
+      <div class="slide__content">
+        <figure class="slide__figure">
+          <iframe class="slide__img" src="https://www.youtube.com/embed/21X5lGlDOfg" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </figure>
+      </div>
+    </section>
+  </section>
+</main>
