--- a/views/gallery.hbs
+++ b/views/gallery.hbs
@@ -1,5 +1,5 @@
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+  integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 <style>
   body {
@@ -44,7 +44,11 @@
               <p class="card-text">{{description}}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
+                  <form action="/profile/share" method="POST">
+                    <input name="image" value="{{../links.[0].href}}" hidden>
+                    <input name="description" value="{{title}}" hidden>
+                    <button type="submit" class="btn btn-sm btn-outline-secondary">share</button>
+                  </form>
                   <button type="button" class="btn btn-sm btn-outline-secondary">Details</button>
                 </div>
                 <small class="text-muted">{{date_created}}</small>
