--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -23,20 +23,28 @@
     </form>
   </div>
   <div class="other">
-    <div class="user-info">
-      <div class="text"><a href="/api/api">Home</a></div>
-    </div>
-    <div class="user-info">
-      {{#if istheLogged}}
-      <div class="text"><a href="/profile/logout">Logout</a></div>
-      {{/if}}
-    </div>
-    <div class="other-icons">
-      <i class="fa fa-user"></i><i class="fa fa-comment"></i><i class="fa fa-globe"></i><i
-        class="fa fa-align-right"></i>
+      <div class="user-info">
+        <div class="text"><a href="/api/api">Home</a></div>
+      </div>
+  {{!-- profile setting btn --}} 
+    <div class="other">
+      <div class="user-info">
+        <div class="text"><a href="/profile/edit">Setting</a></div>
+      </div>
+  {{!-- // --}}
+      <div class="user-info">
+        {{#if istheLogged}}
+        <div class="text"><a href="/profile/logout">Logout</a></div>
+        {{/if}}
+      </div>
+      <div class="other-icons">
+        <i class="fa fa-user"></i><i class="fa fa-comment"></i><i class="fa fa-globe"></i><i
+          class="fa fa-align-right"></i>
+      </div>
     </div>
   </div>
 </header>
+
 <div class="main-content">
   <div class="col-wrapper">
     <div class="col-30">
@@ -48,8 +56,12 @@
           {{#with profileOwner}}
           <div class="profile-card__header all">
             <figure class="profile-card__profile all">
+            {{#if imgPath}}
+              <img src="{{imgPath}}" alt="image">
+            {{else}}
               <img src="https://upload.wikimedia.org/wikipedia/commons/1/1c/Neil_Armstrong.jpg"
-                alt="Short description" />
+                alt="Short description" /> 
+            {{/if}}
             </figure>
           </div>
           <div class="profile-card__body all">
@@ -75,19 +87,21 @@
         {{/if}}
       </div>
       {{/if}}
+    {{!-- display profile setting --}}
       <div class="card">
+        {{#with profileOwner}}
         <div class="text">
-          <span><i class="fa fa-graduation-cap"></i></span>Studied at
-          University of ...
+          <span><i class="fa fa-graduation-cap"></i></span>Working as a {{this.bio}}
         </div>
         <div class="text">
-          <span><i class="fa fa-home"> </i></span>Lives in ...
+          <span><i class="fa fa-home"> </i></span>Born in {{this.dob}}
         </div>
         <div class="text">
-          <span><i class="fa fa-map"></i></span>From ...
+          <span><i class="fa fa-map"></i></span>From {{this.origin}}
         </div>
-      </div>
-      {{!-- display following list  --}}
+        {{/with}}
+      </div> 
+    {{!-- display following list  --}}
       <div class="card">
         <div class="title">Connecting Outer Spaces<span>{{profileOwner.following.length}} outer space</span></div>
         <div class="thumb-wrapper">
@@ -130,7 +144,6 @@
                 </div>
               </div>
             </a>
-            
           </div>
           {{/each}}
           {{/with}}
@@ -139,9 +152,11 @@
           {{/if}}
         </section>
       </section>
+      </div>
     </div>
   </div>
 </div>
+
 {{!-- //ToDo: display friends list in a popup --}}
 {{!-- {{#if users}}
 <div id="myModal" class="modal" style="display: block;">
