--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,10 +1,13 @@
-{{!-- <button><a href="/auth/github"> github</a></button> --}}
-<div id="particles-js"></div>
+<style>
+        * {
+                text-transform: uppercase;
+                line-height: 1em;
+                letter-spacing: 0.2rem;
+        }
+</style>
+
+{{!-- <div id="particles-js"></div> --}}
 <ul class="cb-slideshow">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
         <li></li>
         <li></li>
 </ul>
@@ -20,7 +23,8 @@
                                                                 Don't have an account?
                                                         </h2>
                                                         <p class="user_unregistered-text childsign">
-                                                                Add Text here
+                                                                Signup to explore the limitless
+                                                                content of NASA space imagery and data!
                                                         </p>
                                                         <button class="user_unregistered-signup childsign"
                                                                 id="signup-button">
@@ -33,7 +37,8 @@
                                                                 Have an account?
                                                         </h2>
                                                         <p class="user_registered-text childlog">
-                                                                Add Text here
+                                                                Login to access your profile and add share
+                                                                agnificent space photos with your friends.
                                                         </p>
                                                         <button class="user_registered-login childlog"
                                                                 id="login-button">
@@ -42,7 +47,7 @@
                                                 </div>
                                         </div>
 
-                                        <div class="user_options-forms radar" id="user_options-forms">
+                                        <div class="user_options-forms" id="user_options-forms">
                                                 <div class="user_forms-login">
                                                         <h2 class="forms_title">Login</h2>
                                                         <form class="forms_form" action="/login" method="POST"
