--- a/views/api.hbs
+++ b/views/api.hbs
@@ -1,4 +1,3 @@
-
 <main>
   <section class="slides">
     <section class="slides-nav"></section>
@@ -6,7 +5,7 @@
       <div class="slide__content">
         <figure class="slide__figure">
           <div class="slide__img" style="
-              background: url(https://apod.nasa.gov/apod/image/1910/MilkyWaySaltFlat_Huerta_2048.jpg);
+              background: url(../images/APOD.jpg);
               background-size: cover;
             "></div>
         </figure>
@@ -33,7 +32,7 @@
       <div class="slide__content">
         <figure class="slide__figure">
           <div class="slide__img" style="
-              background: url(https://i.pinimg.com/originals/3a/53/75/3a537591a0cbbd4f34d418cd5f34f705.jpg);
+              background: url(../images/rover.jpg);
               background-size: cover;
             "></div>
         </figure>
@@ -61,7 +60,7 @@
       <div class="slide__content">
         <figure class="slide__figure">
           <div class="slide__img" style="
-              background: url(https://wallup.net/wp-content/uploads/2016/01/18775-Carlsberg-space-advertisements-stars-moon-astronaut-beer-Earth.jpg);
+              background: url(../images/moonBeer.jpg);
               background-size: cover;
             "></div>
         </figure>
@@ -87,7 +86,7 @@
       <div class="slide__content">
         <figure class="slide__figure">
           <div class="slide__img" style="
-              background: url(https://miro.medium.com/max/3840/1*-ivLG-a16m6DxXDBWNo-0A.jpeg);
+              background: url(../images/astroids.jpeg);
               background-size: cover;
             "></div>
         </figure>
