--- a/views/gallery.hbs
+++ b/views/gallery.hbs
@@ -36,12 +36,12 @@
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
             {{#with this.links.[0]}}
-            <img class="card-img-top" src="{{this.href}}">
+            <img class="card-img-top" src="{{this.href}}" style="height: 200px;">
             {{/with}}
             {{#each this.data}}
-            <div class="card-body">
+            <div class="card-body" style=" height:200px">
               <h5>{{title}}</h5>
-              <p class="card-text">{{description}}</p>
+              <p class="card-text">{{splitString description}}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <form action="/profile/share" method="POST">
