use local images+bix bug : sol update

--- a/views/astroides.hbs
+++ b/views/astroides.hbs
@@ -5,7 +5,7 @@
       <div class="slide__content">
         <figure class="slide__figure">
           <div class="slide__img" style="
-              background: url(https://miro.medium.com/max/3840/1*-ivLG-a16m6DxXDBWNo-0A.jpeg);
+              background: url(../images/astroids.jpeg);
               background-size: cover;
             "></div>
         </figure>
