--- a/views/imagesByName.hbs
+++ b/views/imagesByName.hbs
@@ -5,7 +5,7 @@
       <div class="slide__content">
         <figure class="slide__figure">
           <div class="slide__img" style="
-              background: url(https://wallup.net/wp-content/uploads/2016/01/18775-Carlsberg-space-advertisements-stars-moon-astronaut-beer-Earth.jpg);
+              background: url(../images/moonBeer.jpg);
               background-size: cover;
             "></div>
         </figure>
