--- a/views/picDay.hbs
+++ b/views/picDay.hbs
@@ -7,7 +7,7 @@
         <style>
           #sec1::after {
             content: "";
-            background: url(./images/APOD.jpg);
+            background: url(../images/APOD.jpg);
             /* opacity: 0.1; */
             top: 0;
             left: 0;
