--- a/views/rovers.hbs
+++ b/views/rovers.hbs
@@ -1,3 +1,11 @@
+<script>
+
+  function updateTextInput(val) {
+    document.getElementById('textInput').value = val;
+  }
+</script>
+
+
 <main>
   <section class="slides">
     <section class="slide is-active" id="sec2">
@@ -6,7 +14,7 @@
         <figure class="slide__figure">
 
           <div class="slide__img" style="
-              background: url(https://i.pinimg.com/originals/3a/53/75/3a537591a0cbbd4f34d418cd5f34f705.jpg);
+              background: url(../images/rover.jpg);
               background-size: cover;
             "></div>
         </figure>
