--- a/views/gallery.hbs
+++ b/views/gallery.hbs
@@ -3,7 +3,7 @@
 
 <style>
   body {
-    background: url(https://wallup.net/wp-content/uploads/2016/01/18775-Carlsberg-space-advertisements-stars-moon-astronaut-beer-Earth.jpg);
+    background: url(../images/moonBeer.jpg);
     background-size: cover;
     background-attachment: fixed;
     overflow-y: scroll
