--- a/views/profile/profileEdit.hbs
+++ b/views/profile/profileEdit.hbs
@@ -3,13 +3,13 @@
     <h2>Update your profile</h2>
       <form action="/profile/edit" method="post" enctype="multipart/form-data">
         <label>Occupation:</label>
-        <input type="text" name="bio">
+        <input type="text" name="bio" required>
 
         <label>Birthday:</label>
-        <input type="text" name="dob">
+        <input type="text" name="dob" required>
 
         <label>Country:</label>
-        <input type="text" name="origin">
+        <input type="text" name="origin" required>
   
         <label>Photo:</label>
         <input type="file" name="photo">
