add menu to api layout

--- a/views/layout2.hbs
+++ b/views/layout2.hbs
@@ -12,6 +12,37 @@
 
 <body>
   {{{body}}}
+  <div class="navbar" style="left:10rem">
+    <ul>
+      <li>
+        <a href="/profile/profile">
+          Profile</a>
+      </li>
+      <li>
+        <a href="/api/api">
+          Home</a>
+      </li>
+      <li>
+        <a href="/api/imagesByName">
+          Gallery</a>
+      </li>
+      <li>
+        <a href="/api/rovers">
+          Rovers</a>
+      </li>
+      <li>
+        <a href="/api/picDay">
+          APOD</a>
+      </li>
+      <li>
+        <a href="/api/astroids">
+          Asteroids</a>
+      </li>
+      <li>
+
+    </ul>
+
+  </div>
   <script src="/javascripts/script2.js"></script>
 </body>
 
