--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -436,3 +436,64 @@ body {
 #next {
   float: right;
 }
+
+.navbar li {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  position: relative;
+  display: inline;
+  width: 10%;
+}
+.navbar li > a {
+  width: 100px;
+  height: 25px;
+  position: relative;
+  display: table;
+  border-collapse: collapse;
+  border-spacing: 0;
+  color: rgb(71, 151, 151);
+  font-family: arial;
+  font-size: 14px;
+  text-decoration: none;
+  transition: all 0.1s linear;
+}
+
+.navbar li:hover > a {
+  color: white;
+  background-color: rgb(95, 162, 219, 0.4);
+  transform: scale(1.2);
+  box-shadow: 2px 2px 7px 1px #3b6166;
+}
+
+.navbar {
+  z-index: 1000;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: transparent;
+}
+
+/* Style the links inside the navigation bar */
+.navbar a {
+  /* float: left; */
+  display: inline;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  margin-right: 10px;
+  margin-left: 10px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Add a color to the active/current link */
+.navbar a.active {
+  background-color: #3b6166;
+  color: white;
+}
