--- a/views/profile/profileEdit.hbs
+++ b/views/profile/profileEdit.hbs
@@ -15,6 +15,7 @@
         <input type="file" name="photo">
   
         <input type="submit" value="SAVE">
+        <input type="submit" value="SAVE">
       </form>
   </div>
 </div>
