--- a/views/profile/postDetails.hbs
+++ b/views/profile/postDetails.hbs
@@ -1,8 +1,9 @@
 <div class="post-details">
   <h1>post details</h1>
   <img src="{{post.image}}">
-  <label for="description">Description: </label>
-  <p>{{post.description}}</p>
+  
+  <div>
+  <p>Description: {{post.description}}</p>
   {{!-- add like-the-post button --}}
   {{#unless isLoggedInUser}}
     {{#if alreadyLiked}}
@@ -25,12 +26,14 @@
   <p>No comments yet</p>
   {{/if}}
   <p>Add a comment</p>
-  <form action="/profile/posts/{{post._id}}/comment" method="POST">
-    <label for="">Comment:</label>
-    <textarea type="text" name="comment"></textarea>
-    <button type="submit">ADD</button>
-  </form>
-  <br>
-  <a href="/profile/posts/edit/{{post._id}}">Edit post</a>
-  <a href="/profile/posts/delete/{{post._id}}">Delete post</a>
+    <form action="/profile/posts/{{post._id}}/comment" method="POST">
+      <label for="">Comment:</label>
+      <textarea type="text" name="comment"></textarea>
+      <button type="submit">ADD</button>
+    </form>
+ </div>
+  <div class="edit-delete-post">
+    <a  href="/profile/posts/edit/{{post._id}}"> Edit post </a>
+    <a href="/profile/posts/delete/{{post._id}}"> Delete post </a>
+  </div>d
 </div>
