--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -1,15 +1,15 @@
-<ul class="cb-slideshow">
+{{!-- <ul class="cb-slideshow">
   <li></li>
   <li></li>
   <li></li>
   <li></li>
   <li></li>
   <li></li>
-</ul>
+</ul> --}}
 <header>
   <div class="navigation">
     <div class="icon"><i class="fa fa-align-left"></i></div>
-    <div class="text">something</div>
+    <div class="text">outerspace</div>
     {{#if istheLogged}}
     <div class="text"> <a href="/profile/addPost">New post</a>
     </div>
@@ -19,12 +19,12 @@
   </div>
   <div class="awesome-form">
     <form action="/profile/search" method="post">
-      <input type="text" placeholder="search..." name="searchInput" />
+      <input type="text" placeholder="search a friend..." name="searchInput" />
     </form>
   </div>
   <div class="other">
       <div class="user-info">
-        <div class="text"><a href="/api/api">Home</a></div>
+        <div class="text"><a href="/api/api">Exploring Galaxy</a></div>
       </div>
   {{!-- profile setting btn --}} 
     <div class="other">
@@ -44,10 +44,11 @@
     </div>
   </div>
 </header>
-
+<body class="body-background">
 <div class="main-content">
   <div class="col-wrapper">
     <div class="col-30">
+
       <div class="card" style="background: transparent;">
         <div class="profile-card all" data-effect="color">
           <figure class="profile-card__image all">
@@ -66,59 +67,57 @@
           </div>
           <div class="profile-card__body all">
             <h3 class="profile-card__name all">{{this.username}}</h3>
-            <p class="profile-card__job all">{{this.email}}</p>
           </div>
           <div class="profile-card__footer all">
             <p class=""></p>
           </div>
           {{/with}}
         </div>
-      </div>
-      {{#if istheLogged}}
-      {{else}}
-      <div class="card">
-        {{#if alreadyFollowed}}
-        <p>Outer Spaces connected.</p>
-        {{else}}
-        <form action="/profile/{{profileOwner._id}}/follow" method="POST" >
-          <button type="submit" class="btn btn-sm btn-outline-secondary">follow this person</button>
-        </form>
-        {{/if}}
-      </div>
-      {{/if}}
-    {{!-- display profile setting --}}
-      <div class="card">
+      {{!-- </div> --}}
+    <div class="description-card">
+
+      <div>
         {{#with profileOwner}}
-        <div class="text">
-          <span><i class="fa fa-graduation-cap"></i></span>Working as a {{this.bio}}
-        </div>
-        <div class="text">
-          <span><i class="fa fa-home"> </i></span>Born in {{this.dob}}
-        </div>
-        <div class="text">
-          <span><i class="fa fa-map"></i></span>From {{this.origin}}
-        </div>
-       
+         {{!-- display profile setting --}}
+        Originally from {{this.origin}}, working as a {{this.bio}} since {{this.dob}}.
+        {{/with}}
       </div> 
+
+        {{#if istheLogged}}
+        {{else}}
+        <div>
+          {{#if alreadyFollowed}}
+          <p class="follow-btn">connected</p>
+          {{else}}
+          <form action="/profile/{{profileOwner._id}}/follow" method="POST" >
+            <button type="submit" class="follow-btn">connect</button>
+          </form>
+          {{/if}}
+        </div>
+        {{/if}}
+    </div>
+  </div>
     {{!-- display following list  --}}
       <div class="card">
-        <div class="title">Connecting Outer Spaces<span>{{profileOwner.following.length}} outer space</span></div>
-         {{/with}}
+        <div class="title">Connected Spaces<span>{{profileOwner.following.length}} outer space</span></div>
         <div class="thumb-wrapper">
         {{#each profileOwner.following}} 
           {{#if imgPath}}
             <div class="profile-unit" style="background-image: url({{this.imgPath}});" >
               <div class="caption">{{this.username}}</div>
             </div>
-              {{else}}
-              <div class="profile-unit" style="background-image: url(https://upload.wikimedia.org/wikipedia/commons/1/1c/Neil_Armstrong.jpg);" >
+          {{else}}
+            <div class="profile-unit" style="background-image: url(https://upload.wikimedia.org/wikipedia/commons/1/1c/Neil_Armstrong.jpg);" >
               <div class="caption">{{this.username}}</div>
-              </div>
+            </div>
           {{/if}}
         {{/each}}
         </div>
       </div> 
     </div>
+  
+
+  {{!-- right side of profile page --}}
     <div class="col-50" style="width: 75%;">
       <div class="card status">
         <div class="icon-wrapper">
@@ -162,7 +161,7 @@
     </div>
   </div>
 </div>
-
+</body>
 {{!-- //ToDo: display friends list in a popup --}}
 {{!-- {{#if users}}
 <div id="myModal" class="modal" style="display: block;">
