--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -588,7 +588,7 @@ input {
 }
 
 .box {
-  box-shadow: 2px 2px 7px 1px white;
+  /* box-shadow: 2px 2px 7px 1px white; */
   background: rgb(128, 128, 128, 0.3);
   display: block;
   float: left;
@@ -608,7 +608,7 @@ input {
   position: relative;
 }
 
-.box .caption {
+/* .box .caption {
   bottom: 0;
   left: 0;
   right: 0;
@@ -620,7 +620,7 @@ input {
   color: whitesmoke;
   font-size: 18px;
   padding: 20px;
-}
+} */
 
 .caption {
   bottom: 0;
@@ -629,7 +629,7 @@ input {
   text-align: left;
   position: absolute;
   background: rgba(0, 0, 0, 0.2);
-  opacity: 0.5;
+  opacity: 0.7;
   transition: all 0.5s ease;
   color: whitesmoke;
   font-size: 18px;
@@ -1057,7 +1057,7 @@ header {
   display: flex;
   -webkit-box-align: center;
   align-items: center;
-  margin-right: 10px;
+  margin-right: 20px;
   
 }
 
@@ -1089,29 +1089,38 @@ header {
 
 .follow-btn {
   /* box-shadow: 2px 2px 7px 1px white; */
-  background: rgb(128, 128, 128, 0.3);
-  width: 30%;
+  background: rgb(70, 70, 192, 0.5);
   padding: 20px;
   border-radius: 5px;
   margin-bottom: 10px;
   margin-top: 10px;
-  color: grey;
+  color: rgb(232, 232, 232);
+  font-weight: bold;
   font-size: larger;
+  display: inline-block;
+}
+
+.follow-btn.disabled {
+  background: rgb(128, 128, 128, 0.3);
+  color: silver;
+  font-weight: normal;
+}
+
+.follow-wrapper {
+  text-align: center;
 }
 
 
 .description-card {
-  margin-bottom: 20px;
   margin-top: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  color: whitesmoke;
 }
 
 .card {
-  box-shadow: 2px 2px 7px 1px white;
   background: rgb(128, 128, 128, 0.3);
-  
   width: 100%;
   padding: 20px;
   border-radius: 5px;
@@ -1207,12 +1216,11 @@ header {
 body {
   background-color: transparent;
   background-size: cover;
-  background-position: top center;
+  background-position: center;
 }
 
 .box {
   border-radius: 4px;
-  border: solid 1px rgba(255, 255, 255, 0.25);
   margin-bottom: 1em;
 }
 
