--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -24,7 +24,7 @@
   </div>
   <div class="other">
       <div class="user-info">
-        <div class="text"><a href="/api/api">Exploring Galaxy</a></div>
+        <div class="text"><a href="/api/api">Explore Galaxy</a></div>
       </div>
   {{!-- profile setting btn --}} 
     <div class="other">
@@ -49,7 +49,7 @@
   <div class="col-wrapper">
     <div class="col-30">
 
-      <div class="card" style="background: transparent;">
+      <div class="card">
         <div class="profile-card all" data-effect="color">
           <figure class="profile-card__image all">
             <img src="https://c1.staticflickr.com/4/3935/32253842574_d3d449ab86_c.jpg" alt="Short description" />
@@ -85,12 +85,12 @@
 
         {{#if istheLogged}}
         {{else}}
-        <div>
+        <div class="follow-wrapper">
           {{#if alreadyFollowed}}
-          <p class="follow-btn">connected</p>
+          <p class="follow-btn disabled">Connected</p>
           {{else}}
           <form action="/profile/{{profileOwner._id}}/follow" method="POST" >
-            <button type="submit" class="follow-btn">connect</button>
+            <button type="submit" class="follow-btn">Connect</button>
           </form>
           {{/if}}
         </div>
